# named-ctor

./: .gitignore  Cargo.toml  README.md
src/: lib.rs  named_ctor.rs
