[package]
name = "named-ctor"
version = "0.1.1"
edition = "2021"
authors = ["JP <jonhteper@protonmail.com>"]
license = "MIT"
description = "proc-macro to generate constructor functions with syntaxt similar to named params"
repository = "https://github.com/jonhteper/named-ctor"
keywords = ["named", "arguments"]
categories = ["Rust patterns"]

[lib]
name = "named_ctor"
proc-macro = true
path = "src/lib.rs"

[dependencies]
syn = {version = "1.0.109", features = ["full"]}
quote= "1.0"
proc-macro2 = "1.0"
